# wasmedge_httpsreq_module

./: .gitignore  Cargo.toml
examples/: demo.rs
examples/wasm/http_req_10/: Cargo.toml
src/: lib.rs
